// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Component renders correctly with label and selected state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="radio-outer"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 10,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
        {
          "borderColor": "#004492",
        },
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#004492",
          "borderRadius": 6,
          "height": 12,
          "width": 12,
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "marginLeft": 8,
        },
        undefined,
      ]
    }
  >
    Option 2
  </Text>
</View>
`;

exports[`RadioButton Component renders correctly with label and unselected state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="radio-outer"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 10,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
        {
          "borderColor": "gray",
        },
      ]
    }
  />
  <Text
    style={
      [
        {
          "fontSize": 16,
          "marginLeft": 8,
        },
        undefined,
      ]
    }
  >
    Option 1
  </Text>
</View>
`;
